<resources>
    <string name="app_name">Social Media App</string>
    <string name="home">Home</string>
    <string name="notification">Notifications</string>
    <string name="add">Post</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="create_a_story">Create a story</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register"><u>Register</u></string>
    <string name="login"><u>Login</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_without_underline">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="profession">Profession</string>
    <string name="name">Name</string>
    <string name="stay_connected_with_friends">Stay Connected With Friends</string>
    <string name="welcome_to_social_world">Welcome To Social World!</string>
    <string name="login_without_underline">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_post">Create Post</string>
    <string name="add_to_your_post">Add to your post</string>
</resources>