<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/notificationFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_notifications_none_24"
        android:title="@string/notification"/>
    <item
        android:id="@+id/addPostFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/add"/>
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_search_24"
        android:title="@string/search"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_person_outline_24"
        android:title="@string/profile"/>
</menu>